# embeddings-playground

./: README.md  docker-compose.yml
client/: package-lock.json  package.json
client/src/: App.tsx  api.ts  styles.css
client/src/components/documents/: DocsList.tsx  DocsManager.tsx  FileDrop.tsx
client/src/components/new-playground/: EmbeddingsForm.tsx  NewPlaygroundModal.tsx
client/src/components/playground/: ChunksList.tsx  Playground.tsx  PlaygroundArea.tsx  PlaygroundTags.tsx  QueryInput.tsx
client/src/components/scatterplot/: Scatterplot.tsx
client/src/components/sidebar/: PlaygroundButton.tsx  PlaygroundList.tsx  Sidebar.tsx  SidebarToggleButton.tsx
client/src/context/: PlaygroundContext.tsx  UIContext.tsx
client/src/hooks/: useAPI.ts
client/src/layouts/: AppLayout.tsx  ErrorBanner.tsx  Modal.tsx  Overlay.tsx  Paginate.tsx  Spinner.tsx
client/src/models/: ChunkModel.ts  DocumentModel.ts  EmbeddingsModel.ts  PlaygroundModel.ts  PointModel.ts  QueryModel.ts
server/: Dockerfile  pyproject.toml
server/server/: api.py  chroma.py  crud.py  db.py  db_utils.py  embedding_models.py  file_store.py  models.py  mongo.py  schemas.py
